base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foldy
  labels:
    app: foldy
spec:
  type: ClusterIP
  selector:
    app: foldy
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
